<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.kcv.moviesearch.presentation.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kcv.moviesearch.MainActivity">

        <EditText
            android:id="@+id/edit_search"
            style="@style/font16normal"
            android:layout_width="@dimen/edit_text_search_widht"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_medium"
            android:hint="@string/search_dialog"

            android:inputType="textAutoComplete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/search_btn"
            android:onClick="@{() -> viewModel.onSearchClick(editSearch.getText().toString())}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_search"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/container_checks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_search">

            <CheckBox
                android:id="@+id/movies_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/movies_checkBox" />

            <CheckBox
                android:id="@+id/series_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.isSeries()}"
                android:layout_marginLeft="@dimen/margin_medium"

                android:text="@string/series_checkBox" />

            <CheckBox
                android:id="@+id/chapters_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.isEpisode()}"
                android:layout_marginLeft="@dimen/margin_medium"
                android:text="@string/chapters_checkBox" />
        </LinearLayout>


        <View
            style="@style/Divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_checks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_search_results"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"

            app:listData="@{viewModel.searchResponse}"
            tools:listitem="@layout/item_search"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_checks">

        </androidx.recyclerview.widget.RecyclerView>
        <ImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:omdApiStatus="@{viewModel.status}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>